chore: update meta title/og and remove lovable branding

--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Smartoffer.pro Ч Ѕыстрый поиск поставщиков</title>
+    <title>Smartoffer.pro - Ѕыстрый поиск поставщиков</title>
 
     <meta
       name="description"
-      content="Smartoffer.pro Ч сервис дл€ быстрого поиска поставщиков и отправки запросов коммерческих предложений."
+      content="Smartoffer.pro - сервис дл€ быстрого поиска поставщиков и отправки запросов коммерческих предложений."
     />
     <meta name="author" content="Smartoffer" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Smartoffer.pro Ч Ѕыстрый поиск поставщиков" />
+    <meta property="og:title" content="Smartoffer.pro - Ѕыстрый поиск поставщиков" />
     <meta
       property="og:description"
       content="Ѕыстрый поиск поставщиков и подготовка запросов коммерческих предложений в пару кликов."
     />
     <meta property="og:type" content="website" />
-    <!-- ≈сли нет своего og:image Ч лучше убрать, чем оставл€ть lovable -->
+    <!-- ≈сли нет своего og:image - лучше убрать, чем оставл€ть lovable -->
     <!-- <meta property="og:image" content="https://smartoffer.pro/og-image.png" /> -->
 
     <!-- Twitter -->
