fix: utf-8 encoding for index.html

--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
-<!doctype html>
+п»ї<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Smartoffer.pro - Быстрый поиск поставщиков</title>
+    <title>Smartoffer.pro - Р‘С‹СЃС‚СЂС‹Р№ РїРѕРёСЃРє РїРѕСЃС‚Р°РІС‰РёРєРѕРІ</title>
 
     <meta
       name="description"
-      content="Smartoffer.pro - сервис для быстрого поиска поставщиков и отправки запросов коммерческих предложений."
+      content="Smartoffer.pro - СЃРµСЂРІРёСЃ РґР»СЏ Р±С‹СЃС‚СЂРѕРіРѕ РїРѕРёСЃРєР° РїРѕСЃС‚Р°РІС‰РёРєРѕРІ Рё РѕС‚РїСЂР°РІРєРё Р·Р°РїСЂРѕСЃРѕРІ РєРѕРјРјРµСЂС‡РµСЃРєРёС… РїСЂРµРґР»РѕР¶РµРЅРёР№."
     />
     <meta name="author" content="Smartoffer" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Smartoffer.pro - Быстрый поиск поставщиков" />
+    <meta property="og:title" content="Smartoffer.pro - Р‘С‹СЃС‚СЂС‹Р№ РїРѕРёСЃРє РїРѕСЃС‚Р°РІС‰РёРєРѕРІ" />
     <meta
       property="og:description"
-      content="Быстрый поиск поставщиков и подготовка запросов коммерческих предложений в пару кликов."
+      content="Р‘С‹СЃС‚СЂС‹Р№ РїРѕРёСЃРє РїРѕСЃС‚Р°РІС‰РёРєРѕРІ Рё РїРѕРґРіРѕС‚РѕРІРєР° Р·Р°РїСЂРѕСЃРѕРІ РєРѕРјРјРµСЂС‡РµСЃРєРёС… РїСЂРµРґР»РѕР¶РµРЅРёР№ РІ РїР°СЂСѓ РєР»РёРєРѕРІ."
     />
     <meta property="og:type" content="website" />
-    <!-- Если нет своего og:image - лучше убрать, чем оставлять lovable -->
+    <!-- Р•СЃР»Рё РЅРµС‚ СЃРІРѕРµРіРѕ og:image - Р»СѓС‡С€Рµ СѓР±СЂР°С‚СЊ, С‡РµРј РѕСЃС‚Р°РІР»СЏС‚СЊ lovable -->
     <!-- <meta property="og:image" content="https://smartoffer.pro/og-image.png" /> -->
 
     <!-- Twitter -->
@@ -30,7 +30,7 @@
 
   <body>
     <div id="root"></div>
-    <!-- В Vite в production пути перепишутся автоматически -->
+    <!-- Р’ Vite РІ production РїСѓС‚Рё РїРµСЂРµРїРёС€СѓС‚СЃСЏ Р°РІС‚РѕРјР°С‚РёС‡РµСЃРєРё -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
