--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#131720" />
+
     <title>Smartoffer.pro - Быстрый поиск поставщиков</title>
 
     <meta
@@ -19,7 +26,6 @@
       content="Быстрый поиск поставщиков и подготовка запросов коммерческих предложений в пару кликов."
     />
     <meta property="og:type" content="website" />
-    <!-- Если нет своего og:image - лучше убрать, чем оставлять lovable -->
     <!-- <meta property="og:image" content="https://smartoffer.pro/og-image.png" /> -->
 
     <!-- Twitter -->
@@ -30,7 +36,6 @@
 
   <body>
     <div id="root"></div>
-    <!-- В Vite в production пути перепишутся автоматически -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
